Added comand code for shooter

--- a/Some File Name.yml
+++ b/Some File Name.yml
@@ -10,7 +10,7 @@ Children:
   - Name: Shooter
     Base: Subsystem
     Children:
-    - Name: CAN Jaguar 1
+    - Name: Shooter1
       Base: CAN Jaguar
       Children: []
       Properties:
